--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -2,17 +2,18 @@
 
 // Colors
 
-$dark-blue:    #233053 !default;
-$blue:         #108DBC !default;
-$light-blue:   #D0E4F8 !default;
-$x-light-blue: #F4F8FD !default;
-$red:          #E60045 !default;
-$green:        #AED540 !default;
-$light-gray:   #E6EDF4 !default;
-$gray:         #7F94AA !default;
-$dark-gray:    #343a40 !default;
-$ghost:        #F1F4F7 !default;
-$white:        #FFFFFF !default;
+$dark-blue:     #233053 !default;
+$dark-med-blue: #1d406e !default;
+$blue:          #108DBC !default;
+$light-blue:    #D0E4F8 !default;
+$x-light-blue:  #F4F8FD !default;
+$red:           #E60045 !default;
+$green:         #AED540 !default;
+$light-gray:    #E6EDF4 !default;
+$gray:          #7F94AA !default;
+$dark-gray:     #343a40 !default;
+$ghost:         #F1F4F7 !default;
+$white:         #FFFFFF !default;
 
 
 $colors: () !default;
