--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_icons.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_icons.scss
@@ -3,7 +3,8 @@
 $icomoon-icons: (
 
 	arrow-right-long: "\e900",
-	arrow-right: "\e901"
+	arrow-right: "\e901",
+	arrow-right-display: "\e902"
 
 );
 
