--- a/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
@@ -1,5 +1,75 @@
 
 body.single-post {
+	#main-article {
+		.entry-footer {
+			.continue-reading {
+				margin-top: 4rem;
+				@include media-breakpoint-up(md) {
+					margin-top: 6rem;
+				}
+				h4 {
+					font-size: 1.5rem;
+				}
+			}
+			.links {
+				display: flex;
+				margin: 0 -1rem;
+				@include media-breakpoint-up(md) {
+					margin: 0 -2rem;
+				}
+				a {
+					padding: 1rem;
+					flex: 1 1 auto;
+					color: $primary;
+					transition: background-color .2s;
+					@include media-breakpoint-up(md) {
+						padding: 2rem;
+					}
+					&:hover {
+						background-color: $light-gray;
+						&:after {
+							// color: #fff;
+						}
+					}
+					+ a {
+						flex: 0 0 auto;
+						width: calc(50% + 1px);
+						border-left: 2px solid $primary;
+						text-align: right;
+					}
+					&:after {
+						@include icon(map-get($icomoon-icons, arrow-right-display), icomoon);
+						display: block;
+						margin-top: .5rem;
+						font-size: 2rem;
+						line-height: 1;
+						transition: color .2s;
+						@include media-breakpoint-up(sm) {
+							font-size: 2.5rem;
+						}
+					}
+					.label {
+						display: block;
+						text-transform: uppercase;
+						font-weight: 700;
+						color: $gray;
+						font-size: 1rem;
+					}
+					.title {
+						display: none;
+						font-size: 1.75rem;
+						line-height: $line-height-sm;
+						font-style: italic;
+						margin-top: 1.5rem;
+						margin-bottom: 1rem;
+						@include media-breakpoint-up(sm) {
+							display: block;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 
