--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -20380,19 +20380,18 @@ nav.pagination {
     .wp-block-crown-blocks-featured-post-slider article .entry-topics {
       margin-bottom: 1.5rem; }
       .wp-block-crown-blocks-featured-post-slider article .entry-topics .topic {
-        display: inline-block;
-        font-size: 0.875rem;
-        line-height: 1.2;
-        padding: .25rem .75rem;
-        border: 3px solid rgba(52, 58, 64, 0.75);
-        border-radius: 10rem;
-        text-transform: uppercase;
-        letter-spacing: .1em;
-        font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        color: rgba(52, 58, 64, 0.6);
-        font-weight: 700;
         -webkit-transition: background-color .2s, color .2s, boder-color .2s;
-        transition: background-color .2s, color .2s, boder-color .2s; }
+        transition: background-color .2s, color .2s, boder-color .2s;
+        display: inline-block;
+        line-height: 1.2;
+        font-weight: 700;
+        font-size: 0.625rem;
+        letter-spacing: .05em;
+        text-transform: uppercase;
+        border-radius: 10rem;
+        border: 1px solid #233053;
+        padding: .5rem .75rem;
+        color: #233053; }
         .wp-block-crown-blocks-featured-post-slider article .entry-topics .topic:hover {
           background-color: #233053;
           border-color: #233053;
