--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1190,7 +1190,7 @@
 			}
 		}
 	}
-	&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md, &.column-breakpoint-lg, &.column-breakpoint-xl, {
+	&.column-breakpoint-xs, &.column-breakpoint-sm, &.column-breakpoint-md, &.column-breakpoint-lg, &.column-breakpoint-xl {
 		@include media-breakpoint-up(xl) {
 			> .inner.static { display: none; }
 			> .inner.slider { display: grid; }
@@ -1318,18 +1318,17 @@
 		.entry-topics {
 			margin-bottom: 1.5rem;
 			.topic {
-				display: inline-block;
-				font-size: 0.875rem;
-				line-height: $line-height-sm;
-				padding: .25rem .75rem;
-				border: 3px solid rgba($dark-gray, .75);
-				border-radius: 10rem;
-				text-transform: uppercase;
-				letter-spacing: .1em;
-				font-family: $font-family-sans-serif;
-				color: rgba($dark-gray, .6);
-				font-weight: 700;
 				transition: background-color .2s, color .2s, boder-color .2s;
+				display: inline-block;
+				line-height: $line-height-sm;
+				font-weight: 700;
+				font-size: 0.625rem;
+				letter-spacing: .05em;
+				text-transform: uppercase;
+				border-radius: 10rem;
+				border: 1px solid $primary;
+				padding: .5rem .75rem;
+				color: $primary;
 				&:hover {
 					background-color: $primary;
 					border-color: $primary;
