--- a/wp-content/plugins/crown-blocks/src/block-resource-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-resource-header/style.scss
@@ -59,6 +59,32 @@
 		}
 	}
 
+	.entry-breadcrumbs {
+		text-align: center;
+		margin-top: -1rem;
+		margin-bottom: 2rem;
+		@media (min-width: 992px) {
+			margin-bottom: 3rem;
+		}
+		.crumb {
+			display: inline-block;
+			font-size: 1.25rem;
+			font-weight: 700;
+			text-transform: uppercase;
+			letter-spacing: .1em;
+			line-height: 1.2;
+			&:last-child:after {
+				display: none;
+			}
+			&:after {
+				content: '\00a0/';
+			}
+			a {
+				color: inherit;
+			}
+		}
+	}
+
 	.article-header {
 		margin: 0 auto -2rem;
 		max-width: calc(900px + 4rem);
@@ -69,32 +95,42 @@
 		}
 		&.text-color-light {
 			color: #fff;
+			.entry-type .type { border-color: #fff; color: #fff; }
+			.entry-type a.type:hover { background-color: #fff; color: #333; }
 		}
 		&.text-color-dark {
 			color: #333;
+			.entry-type .type { border-color: #333; color: #333; }
+			.entry-type a.type:hover { background-color: #333; color: #fff; }
 		}
 		> .inner {
-			@media (min-width: 992px) {
-				// max-width: 75%;
-			}
-			> *:last-child {
-				margin-bottom: 0;
+			@media (min-width: 768px) {
+				display: flex;
+				flex-wrap: wrap;
 			}
 		}
 	}
 
 	.entry-type {
-		line-height: 1.2;
-		font-size: 1.25rem;
-		font-weight: 500;
 		margin-bottom: 2rem;
-		text-transform: uppercase;
-		letter-spacing: .05em;
-		a {
-			color: inherit;
-			transition: opacity .15s;
+		width: 100%;
+		.type {
+			transition: background-color .2s, color .2s, boder-color .2s;
+			display: inline-block;
+			line-height: 1.2;
+			font-weight: 700;
+			font-size: 0.625rem;
+			letter-spacing: .05em;
+			text-transform: uppercase;
+			border-radius: 10rem;
+			border: 1px solid #333;
+			padding: .5rem .75rem;
+			color: #333;
+		}
+		a.type {
 			&:hover {
-				opacity: .75;
+				background-color: #333;
+				color: #fff;
 			}
 		}
 	}
@@ -104,18 +140,29 @@
 		text-transform: none;
 		font-weight: 700;
 		letter-spacing: 0;
+		max-width: 100%;
+		flex: 1 1 auto;
+		margin-bottom: 0;
 		@media (min-width: 768px) {
 			font-size: 2.5rem;
+			margin-right: 2rem;
+			align-self: flex-end;
+		}
+		@media (min-width: 992px) {
+			margin-right: 4rem;
 		}
 	}
 	
 	.social-sharing-links {
-		flex: 1 1 auto;
-		margin-right: 2rem;
+		width: 100%;
+		margin-top: 1rem;
 		@media (min-width: 768px) {
+			width: auto;
 			flex: 0 1 auto;
 			display: flex;
 			align-items: center;
+			align-self: flex-end;
+			margin-bottom: .25rem;
 		}
 		h4 {
 			line-height: 1.2;
@@ -125,7 +172,7 @@
 			@media (min-width: 768px) {
 				margin-bottom: 0;
 				margin-right: 1rem;
-				font-size: 1.75rem;
+				font-size: 1.5rem;
 			}
 		}
 		.menu {
