--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -2626,12 +2626,50 @@
 	.index-title {
 		font-family: $font-family-sans-serif;
 	}
+	.entry-breadcrumbs {
+		.crumb {
+			a {
+				&:hover {
+					color: $blue;
+				}
+			}
+			&:first-child {
+				a:before {
+					content: '';
+					width: 1.25em;
+					height: 1.25em;
+					display: inline-block;
+					margin-right: .5em;
+					background-image: url(s);
+					background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$gray}" class="bi bi-grid-3x3-gap-fill" viewBox="0 0 16 16"><path d="M1 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2zM1 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zM1 12a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2z"/></svg>'));
+					background-repeat: no-repeat;
+					background-position: center;
+					background-size: contain;
+					vertical-align: top;
+					margin-top: -.05em;
+				}
+			}
+		}
+	}
 	.article-header {
 		&.text-color-light {
 			color: #fff;
+			.entry-type .type { border-color: #fff; color: #fff; }
+			.entry-type a.type:hover { background-color: #fff; color: $primary; }
 		}
 		&.text-color-dark {
 			color: $body-color;
+			.entry-type .type { border-color: $primary; color: $primary; }
+			.entry-type a.type:hover { background-color: $primary; color: #fff; }
+		}
+	}
+	.entry-type {
+		.type {
+			border-color: $primary;
+			color: $primary;
+		}
+		a.type:hover {
+			background-color: $primary;
 		}
 	}
 	.social-sharing-links {
